Fixed background not covering the whole screen on the iPhone X (and up) in landscape mode (due to the notch)

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,6 +27,7 @@ url {
   text-align: center;
   box-sizing: border-box;
   background: var.$color-background;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 .layer {
